sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var n : Int =getValueCount()
  var gap : Int = n
  
  do{
    
    if(gap>1)
    	gap=gap/1.3
    
    var it : Int = 0:
    
    while (it+gap<n){
      if(isSmaller(it+gap,it))
      	swap(it+gap,it)
      it+=1
      
    }
    
  }
}